# pragma_log

./: CMakeLists.txt  README.md
.github/: CODEOWNERS
example/: CMakeLists.txt  app_bundle.cpp  app_bundle.hpp  main.cpp
example/benchmark/: CMakeLists.txt  main.cpp
example/interface_include/: CMakeLists.txt  app_bundle.cpp  app_bundle.hpp  main.cpp
example/single_include/: CMakeLists.txt  main.cpp
include/pragma/: log.hpp
include/pragma/log/: base_logger.hpp  debug_logger.hpp  error_logger.hpp  info_logger.hpp  logging_category.hpp  logging_pattern.hpp  logging_registry.hpp  logging_target.hpp  pattern_utils.hpp  utils.hpp  warning_logger.hpp
scripts/: compose_single_include.sh
single_include/pragma/: log.hpp
src/: base_logger.hpp  debug_logger.hpp  error_logger.hpp  info_logger.hpp  logging_category.hpp  logging_registry.hpp  logging_target.hpp  pragma_log.hpp  utils.hpp  warning_logger.hpp
src/patterns/: pattern_utils.hpp
